Fix: Tried debugging overflow
Error not found

--- a/equathora/src/components/Navbar.css
+++ b/equathora/src/components/Navbar.css
@@ -55,6 +55,7 @@
     display: flex;
     align-items: center;
     list-style: none;
+    height: 9vh;
 }
 
 #avatarIMG {
@@ -69,6 +70,7 @@
 
 #nb-sb {
     width: 40%;
+    height: auto;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -140,7 +142,8 @@
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px)and (max-width: 1199px) {}
+@media only screen and (min-width: 992px)and (max-width: 1199px) {
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) and (max-width: 1599px) {}
