--- a/equathora/src/components/Sidebar.css
+++ b/equathora/src/components/Sidebar.css
@@ -35,7 +35,7 @@
 
 #sidebar li {
     width: 100%;
-    height: 8vh;
+    height: 9vh;
     display: flex;
     align-items: center;
 }
